<resources>
    <string name="app_name" translatable="false">kDrive</string>
    <string name="allCommonDocuments" translatable="false">Common Documents</string>
    <string name="notification_channel_id_comment" translatable="false">comment_channel_id</string>
    <string name="notification_channel_id_general" translatable="false">general_channel_id</string>
    <string name="notification_channel_id_shared" translatable="false">shared_channel_id</string>
    <string name="notification_channel_id_upload_download" translatable="false">upload_download_channel_id</string>
    <string name="notification_channel_id_upload_service" translatable="false">sync_service_channel_id</string>
    <string name="fileDetailsInfoFolderContentTemplate" translatable="false">%1s &amp; %2s</string>
    <string name="aboutAppVersionTitle">kDrive application</string>
    <string name="aboutLicenseDescription">GNU General Public Licence, version 3</string>
    <string name="aboutLicenseTitle">Licence</string>
    <string name="aboutPrivacyTitle">Privacy</string>
    <string name="aboutSourceCodeTitle">Get the source code</string>
    <string name="aboutTitle">About</string>
    <string name="accessDeniedDescriptionIsAdmin">Would you like to amend the rights of this folder to access it? You’ll be added to the users with access to this folder. The other users of this folder will be notified by email.</string>
    <string name="accessDeniedDescriptionIsNotAdmin">Please contact a kDrive administrator to amend your access rights.</string>
    <string name="accessDeniedTitle">You’re not authorised to access this folder.</string>
    <string name="actionPrint">Print</string>
    <string name="addCategoriesTitle">Add categories</string>
    <string name="addPassword">Protect with a password</string>
    <string name="alertRemoveUserDescription">Are you sure you want to remove the user “%s” from this application?</string>
    <string name="alertRemoveUserTitle">Remove user</string>
    <string name="all3DModel">3D Models</string>
    <string name="allActivated">Enabled</string>
    <string name="allAddExpirationDateTitle">Add an expiry date</string>
    <string name="allAllDriveUsers">All kDrive users</string>
    <string name="allArchive">Archives</string>
    <string name="allAudio">Audios</string>
    <string name="allCancellationInProgress">Cancellation in progress…</string>
    <string name="allCode">Code</string>
    <string name="allDateCustom">Custom</string>
    <string name="allDeletedFilePattern">\'Deleted on \'dd MMM yyyy \'-\' HH:mm</string>
    <string name="allDisabled">Disabled</string>
    <string name="allDriveBlockedDescription">All your products have expired. Please renew them to manage them and access their data.</string>
    <string name="allEmail">Email</string>
    <string name="allEmptyInputError">This field cannot be empty</string>
    <string name="allErrorFeatureNotAvailableInFdroid">Feature not available since F-Droid</string>
    <string name="allFileAddFavoris">%s added to favorites</string>
    <string name="allFileAddRightError">You’re not authorised to add files to this folder.</string>
    <string name="allFileDeleteFavoris">%s deleted from favorites</string>
    <string name="allFileDuplicate">%s copied successfully</string>
    <string name="allFileDuplicateCancelled">Copy cancelled</string>
    <string name="allFileMove">%1$s moved to %2$s successfully</string>
    <string name="allFileMoveCancelled">Move cancelled</string>
    <string name="allFileRename">%s renamed successfully</string>
    <string name="allFolder">Folder</string>
    <string name="allFont">Font</string>
    <string name="allJustNow">Just now</string>
    <string name="allLast7Days">Last 7 days</string>
    <string name="allLastModifiedFilePattern">\'Changed on \'dd MMM yyyy \'-\' HH:mm</string>
    <string name="allMinutesShort">%d min</string>
    <string name="allNoNetwork">No network connection</string>
    <string name="allOfficeDocs">Document</string>
    <string name="allOfficeForm">Form</string>
    <string name="allOfficeGrids">Table</string>
    <string name="allOfficeNote">Text</string>
    <string name="allOfficePoints">Presentation</string>
    <string name="allPackAvailability">Available for Solo, Team &amp; Pro plans only 🚀</string>
    <string name="allPasswordHint">Password</string>
    <string name="allPathTitle">Location</string>
    <string name="allPdf">PDF</string>
    <string name="allPermissionNeeded">You must allow access to your files to be able to upload and save them</string>
    <string name="allPermissionNeededAndroid13">You must authorize access to all your media files to be able to upload and save them. But also allow notifications to follow the progress.</string>
    <string name="allPictures">Images</string>
    <string name="allToday">Today</string>
    <string name="allTrashActionCancelled">Deletion cancelled</string>
    <plurals name="allUploadFinishedDescription">
        <item quantity="one">%s was uploaded</item>
        <item quantity="other">%d files were uploaded</item>
    </plurals>
    <string name="allUploadFinishedTitle">Upload finished</string>
    <string name="allUserAnonymous">Anonymous</string>
    <string name="allVideo">Videos</string>
    <string name="allYesterday">Yesterday</string>
    <string name="appSecurityDescription">Protect access to your app by enabling your phone lock.</string>
    <string name="appSecurityTitle">App lock</string>
    <string name="backgroundSyncCheckboxTitle">I’ve taken the appropriate steps</string>
    <string name="backgroundSyncDescription">To ensure proper kDrive’s functioning, please enable background synchronization on your phone</string>
    <string name="backgroundSyncOpenGuideButton">Open guide</string>
    <string name="backgroundSyncOpenGuideDescription">It may be possible that your phone model blocks the background synchronization even though the option is activated. Please follow this guide to make it work. Otherwise, you will have to manually sync your files from the application.</string>
    <string name="backgroundSyncSwitchDescription">The application will automatically synchronize your files in the background.</string>
    <string name="backgroundSyncSwitchTitle">Allow the application to run in the background</string>
    <string name="backgroundSyncTitle">Background synchronization</string>
    <string name="belongToAllCategoriesFilterDescription">Results must belong to all selected categories</string>
    <string name="belongToOneCategoryFilterDescription">Results must belong to one of the selected categories</string>
    <plurals name="bulkDownloadNotificationContent">
        <item quantity="one">1 file downloaded out of %2$d</item>
        <item quantity="other">%1$d files downloaded out of %2$d</item>
    </plurals>
    <string name="bulkDownloadNotificationTitleNoProgress">Import in progress</string>
    <string name="bulkDownloadNotificationTitleWithProgress">Import in progress (%1$d%%)</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonAddComment">Add a comment</string>
    <string name="buttonAddFavorites">Add to favorites</string>
    <string name="buttonAddToKDrive">Add to my kDrive</string>
    <string name="buttonAddUser">Add a user</string>
    <string name="buttonApplyFilters">Apply filters</string>
    <string name="buttonAuthorize">Authorise</string>
    <string name="buttonAvailableOffline">Available offline</string>
    <string name="buttonBack">Back</string>
    <string name="buttonCancelImport">Cancel import</string>
    <string name="buttonChangeFolderColor">Change folder colour</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonClearFilters">Clear filters</string>
    <string name="buttonClose">Close</string>
    <string name="buttonConfigure">Configure</string>
    <string name="buttonConfirm">Confirm</string>
    <string name="buttonConfirmNotify">Confirm and notify</string>
    <string name="buttonConvertToDropBox">Convert to drop box</string>
    <string name="buttonCopy">Copy</string>
    <string name="buttonCreate">Create</string>
    <string name="buttonCreateFolder">Create folder</string>
    <string name="buttonCreateOnlyOfficeCopy">Create a .%s copy</string>
    <string name="buttonCreatePublicLink">Create a public link</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonDeselectAll">Deselect all</string>
    <string name="buttonDisableDropBox">Disable the drop box</string>
    <string name="buttonDocumentScanning">Scan a document</string>
    <string name="buttonDownload">Download</string>
    <string name="buttonDuplicate">Duplicate</string>
    <string name="buttonEdit">Edit</string>
    <string name="buttonEmpty">Empty</string>
    <string name="buttonEmptyTrash">Empty recycle bin</string>
    <string name="buttonFeedback">Feedback</string>
    <string name="buttonFileRights">Sharing and rights</string>
    <string name="buttonGoToSettings">Go to Settings</string>
    <string name="buttonLeaveShare">Leave share</string>
    <string name="buttonLike">Like</string>
    <string name="buttonLogin">Log in</string>
    <string name="buttonLogout">Log off</string>
    <string name="buttonManageDropBox">Manage the drop box</string>
    <string name="buttonMoveTo">Move to</string>
    <string name="buttonPlayerFfwd">Forward a few seconds</string>
    <string name="buttonPlayerNext">Next</string>
    <string name="buttonPlayerPlayPause">Play/Pause</string>
    <string name="buttonPlayerPrev">Previous</string>
    <string name="buttonPlayerRew">Back a few seconds</string>
    <string name="buttonRetry">Try again</string>
    <string name="createFolderTitle">Create folder</string>
    <string name="favoritesTitle">Favorites</string>
    <string name="fileListTitle">Files</string>
    <string name="filtersTitle">Filters</string>
    <string name="galleryTitle">Gallery</string>
    <string name="homeTitle">Welcome</string>
    <string name="lastEditsTitle">Most recent changes</string>
    <string name="localizedFilenamePrivateTeamSpace">My folder</string>
    <string name="localizedFilenameTeamSpace">Common folders</string>
    <string name="manageCategoriesTitle">Manage categories</string>
    <string name="menuTitle">Menu</string>
    <string name="mySharesTitle">My shares</string>
    <string name="obtainkDriveAdAlreadyGotAccount">I already have an account</string>
    <string name="obtainkDriveAdDescription">Store your photos, documents and emails in Switzerland with an independent company that respects your privacy.</string>
    <string name="obtainkDriveAdFreeTrialButton">Free trial</string>
    <string name="obtainkDriveAdListing1">15 GB free, then 2 TB up to 106 TB</string>
    <string name="obtainkDriveAdListing2">Online creation and collaboration for Word, Excel and PowerPoint documents</string>
    <string name="obtainkDriveAdListing3">Automatic file import from Google Drive, Dropbox, One Drive, NextCloud, Hubic and WebDav</string>
    <string name="obtainkDriveAdTitle">Get kDrive for free</string>
    <string name="offlineFileTitle">Offline</string>
    <string name="searchTitle">Search</string>
    <string name="sharedWithMeTitle">Shared with me</string>
    <string name="syncOnlyWifiDescription">Offline files will be only synchronized with Wi-Fi</string>
    <string name="syncOnlyWifiTitle">With Wi-Fi only</string>
    <string name="syncWifiAndMobileDataDescription">Mobile data usage charges may apply</string>
    <string name="syncWifiAndMobileDataTitle">With Wi-Fi and mobile data</string>
    <string name="syncWifiSettingsTitle">Synchronize offline files</string>
    <string name="trashActionDelete">Delete permanently</string>
    <string name="trashActionRestoreFileIn">Recover in</string>
    <string name="trashActionRestoreFileOriginalPlace">Recover to the original location</string>
    <string name="trashTitle">Trash</string>
</resources>