<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak kDrive - Android
  ~ Copyright (C) 2022 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_house"
        android:title="@string/homeTitle" />

    <item
        android:id="@+id/rootFilesFragment"
        android:icon="@drawable/ic_folder"
        android:title="@string/fileListTitle" />

    <item
        android:enabled="false"
        android:title="@null" />

    <item
        android:id="@+id/menuGalleryFragment"
        android:icon="@drawable/ic_gallery"
        android:title="@string/galleryTitle" />

    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/menuTitle" />

</menu>
