<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak kDrive - Android
  ~ Copyright (C) 2025 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_bottom_sheet_separator" />

    <TextView
        android:id="@+id/selectTitle"
        style="@style/Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandardMedium"
        android:text="@string/syncWifiSettingsTitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <com.infomaniak.drive.views.ItemSyncFilesBottomSheetView
        android:id="@+id/syncOnlyWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:descText="@string/syncOnlyWifiDescription"
        app:text="@string/syncOnlyWifiTitle" />

    <com.infomaniak.drive.views.ItemSyncFilesBottomSheetView
        android:id="@+id/syncWithAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:descText="@string/syncWifiAndMobileDataDescription"
        app:text="@string/syncWifiAndMobileDataTitle" />

</LinearLayout>
