<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak kDrive - Android
  ~ Copyright (C) 2021 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:visibility="visible">

    <ImageButton
        android:id="@+id/exo_prev"
        style="@style/ExoStyledControls.Button.Center.Previous"
        android:contentDescription="@string/buttonPlayerPrev" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exo_rew_with_amount"
        style="@style/ExoStyledControls.Button.Center.RewWithAmount"
        android:contentDescription="@string/buttonPlayerRew"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:textSize="@dimen/exo_icon_text_size"
        app:backgroundTint="@color/white" />

    <ImageButton
        android:id="@+id/exo_play_pause"
        style="@style/ExoStyledControls.Button.Center.PlayPause"
        android:contentDescription="@string/buttonPlayerPlayPause" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exo_ffwd_with_amount"
        style="@style/ExoStyledControls.Button.Center.FfwdWithAmount"
        android:contentDescription="@string/buttonPlayerFfwd"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:textSize="@dimen/exo_icon_text_size"
        app:backgroundTint="@color/white" />

    <ImageButton
        android:id="@+id/exo_next"
        style="@style/ExoStyledControls.Button.Center.Next"
        android:contentDescription="@string/buttonPlayerNext" />
</LinearLayout>