<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak kDrive - Android
  ~ Copyright (C) 2024 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginStandard"
        android:layout_marginTop="32dp"
        android:importantForAccessibility="no"
        android:src="@drawable/illu_obtain_kdrive" />

    <TextView
        android:id="@+id/obtainKDriveAdTitle"
        style="@style/H2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:gravity="center"
        android:text="@string/obtainkDriveAdTitle" />

    <TextView
        android:id="@+id/obtainKDriveAdDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginStandard"
        android:layout_marginBottom="@dimen/marginStandardSmall"
        android:gravity="center"
        android:text="@string/obtainkDriveAdDescription"
        android:textSize="@dimen/h3" />

    <TextView
        android:id="@+id/obtainKDriveAdListing1"
        style="@style/ObtainkDriveAdListingTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginStandard"
        android:text="@string/obtainkDriveAdListing1" />

    <TextView
        android:id="@+id/obtainKDriveAdListing2"
        style="@style/ObtainkDriveAdListingTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginStandard"
        android:text="@string/obtainkDriveAdListing2" />

    <TextView
        android:id="@+id/obtainKDriveAdListing3"
        style="@style/ObtainkDriveAdListingTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginStandard"
        android:text="@string/obtainkDriveAdListing3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/freeTrialButton"
        style="@style/ButtonInfomaniak"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/marginStandard"
        android:layout_marginTop="@dimen/marginStandard"
        android:text="@string/obtainkDriveAdFreeTrialButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alreadyGotAnAccountButton"
        style="@style/TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginStandard"
        android:layout_marginBottom="@dimen/marginStandardMedium"
        android:text="@string/obtainkDriveAdAlreadyGotAccount" />

</LinearLayout>
