<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak kDrive - Android
  ~ Copyright (C) 2022-2024 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_bottom_sheet_separator" />

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/manageCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/ic_category"
        app:text="@string/manageCategoriesTitle"
        tools:visibility="visible" />

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/addFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_star_filled"
        app:iconTint="@color/star_favorites"
        app:text="@string/buttonAddFavorites" />

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/coloredFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/ic_color_bucket"
        app:text="@string/buttonChangeFolderColor"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/availableOffline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:background="?selectableItemBackground">

        <FrameLayout
            android:id="@+id/availableOfflineIconLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStandard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/availableOfflineIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_offline"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/availableOfflineComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/buttonAvailableOffline"
                android:src="@drawable/ic_check"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/availableOfflineText"
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStandardMedium"
            android:layout_marginEnd="@dimen/marginStandard"
            android:text="@string/buttonAvailableOffline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/availableOfflineSwitch"
            app:layout_constraintStart_toEndOf="@id/availableOfflineIconLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/availableOfflineSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginStandard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/disabledAvailableOffline"
            style="@style/DisabledView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/downloadFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_download"
        app:text="@string/buttonDownload" />

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/moveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_folder_select"
        app:text="@string/buttonMoveTo" />

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/duplicateFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_duplicate"
        app:text="@string/buttonDuplicate" />

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/restoreFileIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_restore"
        app:text="@string/trashActionRestoreFileIn" />

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/restoreFileToOriginalPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_restore"
        app:text="@string/trashActionRestoreFileOriginalPlace" />

    <com.infomaniak.drive.views.BottomSheetItemView
        android:id="@+id/deletePermanently"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_delete"
        app:text="@string/trashActionDelete" />

</LinearLayout>
